# SlicerTutorialMaker

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_esp.md  README_pt-br.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_test.yml  codespell.yml  lint.yml
TutorialMaker/: CMakeLists.txt  TutorialMaker.py
TutorialMaker/Languages/: CTK_ar.qm  CTK_ar_SA.qm  CTK_ca.qm  CTK_cs.qm  CTK_de.qm  CTK_en-US.qm  CTK_es.qm  CTK_es_419.qm  CTK_fr.qm  CTK_hu.qm  CTK_it.qm  CTK_lzh.qm  CTK_pt.qm  CTK_pt_BR.qm  CTK_ru.qm  CTK_ta.qm  CTK_te.qm  CTK_uk.qm  CTK_zh-CN.qm  CTK_zh_Hant.qm  LanguagePacks_ar_SA.qm  LanguagePacks_arc.qm  LanguagePacks_cs.qm  LanguagePacks_de.qm  LanguagePacks_en-US.qm  LanguagePacks_es.qm  LanguagePacks_es_419.qm  LanguagePacks_ff.qm  LanguagePacks_fi.qm  LanguagePacks_fr.qm  LanguagePacks_hu.qm  LanguagePacks_it.qm  LanguagePacks_ka.qm  LanguagePacks_ko.qm  LanguagePacks_lzh.qm  LanguagePacks_nb_NO.qm  LanguagePacks_pt.qm  LanguagePacks_pt_BR.qm  LanguagePacks_ru.qm  LanguagePacks_ta.qm  (+142 more)
TutorialMaker/Lib/: Annotations.py  Anotations.py  CreateTutorial.py  FileMDHTML.py  GitTools.py  TutorialEditor.py  TutorialExporter.py  TutorialGUI - AddWidget.py  TutorialGUI - Copy.py  TutorialGUI -AeleccionaAgrega.py  TutorialGUI.py  TutorialPainter.py  TutorialUtils.py  painter.py  tmLabel.py  utils.py
TutorialMaker/Resources/UI/: ScreenshotAnnotator.ui  TutorialEditor.ui  TutorialMaker.ui
TutorialMaker/Scripts/: update_translations.py
